--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "fast-memoize": "^2.5.2",
     "fast-shuffle": "^6.1.1",
     "html-react-parser": "^5.2.2",
-    "i18next": "^24.2.2",
+    "i18next": "^25.2.1",
+    "intl-pluralrules": "^2.0.1",
     "mathjs": "^14.3.0",
     "ramda": "^0.30.1",
     "react": "18.3.1",
