--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "i18next": "^25.2.1",
     "intl-pluralrules": "^2.0.1",
     "mathjs": "^14.3.0",
+    "petrovich": "^0.2.1",
     "ramda": "^0.30.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
