--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -13,6 +13,7 @@
 		"**/*.tsx",
 		".expo/types/**/*.ts",
 		"expo-env.d.ts",
-		"declarations.d.ts"
+		"declarations.d.ts",
+		"petrovich.d.ts"
 	]
 }
