--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "redux-persist": "^6.0.0",
     "redux-toolkit-helpers": "^1.0.3",
     "rn-statusbar-height": "^2.1.1",
+    "russian-nouns-js": "^2.2.0",
     "semver": "^7.7.1",
     "styled-components": "^6.1.15",
     "uuid": "^11.0.5"
@@ -106,6 +107,7 @@
     "@types/ramda": "^0.30.2",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
+    "@types/russian-nouns-js": "^1.2.5",
     "@types/semver": "^7.7.0",
     "@types/styled-components-react-native": "^5.2.5",
     "jest": "^29.2.1",
