--- a/package.json
+++ b/package.json
@@ -28,34 +28,35 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^14.1.0",
     "@fanchenbao/react-native-scroll-indicator": "^0.4.0",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/slider": "4.5.5",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/slider": "4.5.6",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@reduxjs/toolkit": "^2.5.1",
     "arkham-divider-data": "^1.1.14",
     "arkham-investigator-data": "^2.0.6",
-    "expo": "~52.0.38",
-    "expo-application": "~6.0.2",
-    "expo-asset": "~11.0.5",
-    "expo-blur": "~14.0.1",
-    "expo-constants": "~17.0.3",
+    "expo": "^53.0.11",
+    "expo-application": "~6.1.4",
+    "expo-asset": "~11.1.5",
+    "expo-audio": "~0.4.6",
+    "expo-blur": "~14.1.5",
+    "expo-constants": "~17.1.6",
     "expo-custom-assets": "^1.4.1",
-    "expo-font": "~13.0.2",
-    "expo-haptics": "~14.0.0",
-    "expo-image": "~2.0.7",
-    "expo-keep-awake": "~14.0.3",
-    "expo-linking": "~7.0.3",
-    "expo-notifications": "~0.29.14",
-    "expo-router": "~4.0.21",
-    "expo-screen-orientation": "~8.0.4",
-    "expo-splash-screen": "~0.29.24",
-    "expo-status-bar": "~2.0.0",
-    "expo-symbols": "~0.2.0",
-    "expo-system-ui": "~4.0.9",
-    "expo-web-browser": "~14.0.1",
+    "expo-font": "~13.3.1",
+    "expo-haptics": "~14.1.4",
+    "expo-image": "~2.2.0",
+    "expo-keep-awake": "~14.1.4",
+    "expo-linking": "~7.1.5",
+    "expo-notifications": "~0.31.3",
+    "expo-router": "~5.0.7",
+    "expo-screen-orientation": "~8.1.7",
+    "expo-splash-screen": "~0.30.9",
+    "expo-status-bar": "~2.2.3",
+    "expo-symbols": "~0.4.5",
+    "expo-system-ui": "~5.0.8",
+    "expo-web-browser": "~14.1.6",
     "fast-memoize": "^2.5.2",
     "fast-shuffle": "^6.1.1",
     "html-react-parser": "^5.2.2",
@@ -64,26 +65,26 @@
     "mathjs": "^14.3.0",
     "petrovich": "^0.2.1",
     "ramda": "^0.30.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-i18next": "^15.4.1",
-    "react-native": "0.76.9",
+    "react-native": "0.79.3",
     "react-native-android-navbar-height": "^0.3.3",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-error-boundary": "^2.0.0",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-gradients": "^2.1.1",
     "react-native-haptic-feedback": "^2.3.3",
     "react-native-localize": "^3.4.1",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
     "react-native-simple-toast": "^3.3.2",
     "react-native-storage": "^1.0.1",
-    "react-native-svg": "15.8.0",
-    "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
+    "react-native-svg": "15.11.2",
+    "react-native-web": "^0.20.0",
+    "react-native-webview": "13.13.5",
     "react-redux": "^9.2.0",
     "react-responsive": "^10.0.0",
     "redux-devtools-expo-dev-plugin": "^1.0.0",
@@ -92,8 +93,7 @@
     "rn-statusbar-height": "^2.1.1",
     "semver": "^7.7.1",
     "styled-components": "^6.1.15",
-    "uuid": "^11.0.5",
-    "expo-audio": "~0.3.5"
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -104,15 +104,15 @@
     "@types/fast-shuffle": "^4.5.3",
     "@types/jest": "^29.5.12",
     "@types/ramda": "^0.30.2",
-    "@types/react": "~18.3.12",
-    "@types/react-test-renderer": "^18.3.0",
+    "@types/react": "~19.0.0",
+    "@types/react-test-renderer": "^19.0.0",
     "@types/semver": "^7.7.0",
     "@types/styled-components-react-native": "^5.2.5",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.6",
     "lefthook": "^1.11.3",
     "react-native-svg-transformer": "^1.5.0",
-    "react-test-renderer": "18.3.1",
+    "react-test-renderer": "19.0.0",
     "typescript": "^5.3.3"
   },
   "private": true,
