--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@reduxjs/toolkit": "^2.5.1",
+    "@types/redux-saga": "^0.9.31",
     "arkham-divider-data": "^1.1.14",
     "arkham-investigator-data": "^2.0.6",
     "expo": "^53.0.11",
@@ -90,6 +91,7 @@
     "react-responsive": "^10.0.0",
     "redux-devtools-expo-dev-plugin": "^1.0.0",
     "redux-persist": "^6.0.0",
+    "redux-saga": "^1.3.0",
     "redux-toolkit-helpers": "^1.0.3",
     "rn-statusbar-height": "^2.1.1",
     "semver": "^7.7.1",
