--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "i18next": "^25.2.1",
     "intl-pluralrules": "^2.0.1",
     "mathjs": "^14.3.0",
+    "moment": "^2.30.1",
     "petrovich": "^0.2.1",
     "ramda": "^0.30.1",
     "react": "19.0.0",
@@ -109,6 +110,7 @@
     "@types/color": "^4.2.0",
     "@types/fast-shuffle": "^4.5.3",
     "@types/jest": "^29.5.12",
+    "@types/moment": "^2.11.29",
     "@types/ramda": "^0.30.2",
     "@types/react": "~19.0.0",
     "@types/react-test-renderer": "^19.0.0",
