--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "moment": "^2.30.1",
     "petrovich": "^0.2.1",
     "ramda": "^0.30.1",
+    "ramda-adjunct": "^5.1.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-i18next": "^15.4.1",
