--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "react-native-toast-message": "^2.3.3",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
+    "react-native-zip-archive": "^7.0.2",
     "react-redux": "^9.2.0",
     "react-responsive": "^10.0.0",
     "redux-devtools-expo-dev-plugin": "^2.0.0",
@@ -107,7 +108,8 @@
     "rn-statusbar-height": "^2.1.1",
     "semver": "^7.7.1",
     "styled-components": "^6.1.15",
-    "uuid": "^11.0.5"
+    "uuid": "^11.0.5",
+    "expo-file-system": "~18.1.11"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
