--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
     "expo-custom-assets": "^1.4.1",
+    "expo-file-system": "~18.1.11",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.2.0",
@@ -91,6 +92,7 @@
     "react-native-haptic-feedback": "^2.3.3",
     "react-native-localize": "^3.4.1",
     "react-native-reanimated": "~3.17.4",
+    "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-storage": "^1.0.1",
@@ -108,8 +110,7 @@
     "rn-statusbar-height": "^2.1.1",
     "semver": "^7.7.1",
     "styled-components": "^6.1.15",
-    "uuid": "^11.0.5",
-    "expo-file-system": "~18.1.11"
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
