--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "arkham-investigator-data": "^2.0.6",
     "axios": "^1.11.0",
     "dotenv": "^17.2.1",
-    "expo": "^53.0.11",
-    "expo-application": "~6.1.4",
+    "expo": "53.0.20",
+    "expo-application": "~6.1.5",
     "expo-asset": "~11.1.5",
     "expo-audio": "~0.4.6",
     "expo-blur": "~14.1.5",
@@ -59,16 +59,16 @@
     "expo-file-system": "~18.1.11",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
-    "expo-image": "~2.2.0",
+    "expo-image": "~2.4.0",
     "expo-keep-awake": "~14.1.4",
-    "expo-linking": "~7.1.5",
-    "expo-router": "~5.0.7",
+    "expo-linking": "~7.1.7",
+    "expo-router": "~5.1.4",
     "expo-screen-orientation": "~8.1.7",
-    "expo-splash-screen": "~0.30.9",
+    "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.8",
-    "expo-web-browser": "~14.1.6",
+    "expo-system-ui": "~5.0.10",
+    "expo-web-browser": "~14.2.0",
     "fast-memoize": "^2.5.2",
     "fast-shuffle": "^6.1.1",
     "html-react-parser": "^5.2.2",
@@ -82,7 +82,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-i18next": "^15.4.1",
-    "react-native": "0.79.3",
+    "react-native": "0.79.5",
     "react-native-android-navbar-height": "^0.3.3",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-error-boundary": "^2.0.0",
