--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -86,13 +86,13 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.arkhaminvestigator'
+    namespace 'com.arkhaminvestigator.dev'
     defaultConfig {
-        applicationId 'com.arkhaminvestigator'
+        applicationId 'com.arkhaminvestigator.dev'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 326
-        versionName "2.0.0-alpha.5"
+        versionCode 327
+        versionName "2.0.0-alpha.6"
     }
     signingConfigs {
         debug {
