--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "arkham-investigator",
   "main": "expo-router/entry",
-  "version": "2.0.0-alpha.7",
+  "version": "2.0.0-alpha.8",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
@@ -27,12 +27,13 @@
     "prebuild:android:dev": "MODE=development npm run prebuild -- -p android",
     "prebuild:android": "npm run prebuild -- -p android",
     "prebuild:ios": "npm run prebuild -- -p ios",
-    "eas:android": "npm run prebuild:android && eas build -p android",
+    "eas:android": "npm run version:increment && npm run prebuild:android && eas build -p android",
     "eas:apk": "npm run eas:android -- --profile apk",
     "build:apk": "npm run eas:apk -- --local",
     "build:android": "npm run eas:android -- --local",
     "setup:font": "tsx ./cli/update-icon-font.ts",
-    "setup": "npm run setup"
+    "setup": "npm run setup",
+    "version:increment": "tsx ./cli/increment-version.ts"
   },
   "jest": {
     "preset": "jest-expo"
