--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "expo-image": "~2.4.0",
     "expo-keep-awake": "~14.1.4",
     "expo-linking": "~7.1.7",
+    "expo-navigation-bar": "~4.2.7",
     "expo-router": "~5.1.4",
     "expo-screen-orientation": "~8.1.7",
     "expo-splash-screen": "~0.30.10",
@@ -86,6 +87,7 @@
     "react-i18next": "^15.4.1",
     "react-native": "0.79.5",
     "react-native-android-navbar-height": "^0.3.3",
+    "react-native-edge-to-edge": "^1.6.2",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-error-boundary": "^2.0.0",
     "react-native-gesture-handler": "~2.24.0",
@@ -112,8 +114,7 @@
     "rn-statusbar-height": "^2.1.1",
     "semver": "^7.7.1",
     "styled-components": "^6.1.15",
-    "uuid": "^11.0.5",
-    "expo-navigation-bar": "~4.2.7"
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
