--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "build:android": "npm run eas:android -- --local",
     "setup:font": "tsx ./cli/update-icon-font.ts",
     "setup": "npm run setup",
-    "version:increment": "tsx ./cli/increment-version.ts"
+    "version:increment": "tsx ./cli/increment-version.ts",
+    "gradle:clean": "cd android && ./gradlew clean",
+    "expo:clear": "expo start -c"
   },
   "jest": {
     "preset": "jest-expo"
@@ -51,10 +53,10 @@
     "arkham-investigator-data": "^2.0.6",
     "axios": "^1.11.0",
     "dotenv": "^17.2.1",
-    "expo": "53.0.20",
+    "expo": "53.0.22",
     "expo-application": "~6.1.5",
     "expo-asset": "~11.1.5",
-    "expo-audio": "~0.4.6",
+    "expo-audio": "~0.4.9",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
     "expo-custom-assets": "^1.4.1",
@@ -64,13 +66,13 @@
     "expo-image": "~2.4.0",
     "expo-keep-awake": "~14.1.4",
     "expo-linking": "~7.1.7",
-    "expo-navigation-bar": "~4.2.7",
-    "expo-router": "~5.1.4",
+    "expo-navigation-bar": "~4.2.8",
+    "expo-router": "~5.1.5",
     "expo-screen-orientation": "~8.1.7",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.10",
+    "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
     "fast-memoize": "^2.5.2",
     "fast-shuffle": "^6.1.1",
@@ -87,7 +89,7 @@
     "react-i18next": "^15.4.1",
     "react-native": "0.79.5",
     "react-native-android-navbar-height": "^0.3.3",
-    "react-native-edge-to-edge": "^1.6.2",
+    "react-native-edge-to-edge": "1.6.0",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-error-boundary": "^2.0.0",
     "react-native-gesture-handler": "~2.24.0",
@@ -131,7 +133,7 @@
     "@types/semver": "^7.7.0",
     "@types/styled-components-react-native": "^5.2.5",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.6",
+    "jest-expo": "~53.0.10",
     "lefthook": "^1.11.3",
     "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "19.0.0",
