--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -86,13 +86,13 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.arkhaminvestigator'
+    namespace 'com.arkhaminvestigator.dev'
     defaultConfig {
-        applicationId 'com.arkhaminvestigator'
+        applicationId 'com.arkhaminvestigator.dev'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 345
-        versionName "2.0.0-beta.1"
+        versionCode 346
+        versionName "2.0.0-beta.2"
     }
     signingConfigs {
         debug {
