--- a/package.json
+++ b/package.json
@@ -119,7 +119,8 @@
     "semver": "^7.7.1",
     "styled-components": "^6.1.15",
     "uuid": "^11.0.5",
-    "expo-build-properties": "~0.14.8"
+    "expo-build-properties": "~0.14.8",
+    "expo-device": "~7.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
