--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "arkham-investigator",
   "main": "expo-router/entry",
-  "version": "2.0.0-beta.15",
+  "version": "2.0.0-beta.17",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
@@ -15,7 +15,7 @@
     "web": "expo start --web",
     "test": "jest --watchAll",
     "expo:lint": "expo lint",
-    "knip": "npx knip",
+    "knip": "knip",
     "circular": "npx madge --circular slices/",
     "t": "npm run ts:check",
     "ts:check": "tsc",
@@ -42,25 +42,24 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.1.0",
     "@fanchenbao/react-native-scroll-indicator": "^0.4.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-community/slider": "4.5.6",
-    "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@reduxjs/toolkit": "^2.5.1",
     "arkham-divider-data": "^1.1.14",
     "arkham-investigator-data": "^2.0.6",
     "axios": "^1.11.0",
+    "domelementtype": "^2.3.0",
     "dotenv": "^17.2.1",
     "expo": "53.0.22",
     "expo-application": "~6.1.5",
     "expo-asset": "~11.1.5",
     "expo-audio": "~0.4.9",
     "expo-blur": "~14.1.5",
+    "expo-build-properties": "~0.14.8",
     "expo-constants": "~17.1.6",
-    "expo-custom-assets": "^1.4.1",
     "expo-file-system": "~18.1.11",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
@@ -73,11 +72,11 @@
     "expo-screen-orientation": "~8.1.7",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
     "fast-memoize": "^2.5.2",
     "fast-shuffle": "^6.1.1",
+    "html-dom-parser": "^5.1.1",
     "html-react-parser": "^5.2.2",
     "i18next": "^25.2.1",
     "intl-pluralrules": "^2.0.1",
@@ -118,9 +117,7 @@
     "rn-statusbar-height": "^2.1.1",
     "semver": "^7.7.1",
     "styled-components": "^6.1.15",
-    "uuid": "^11.0.5",
-    "expo-build-properties": "~0.14.8",
-    "expo-device": "~7.1.4"
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -138,6 +135,7 @@
     "@types/styled-components-react-native": "^5.2.5",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.10",
+    "knip": "^5.63.1",
     "lefthook": "^1.11.3",
     "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "19.0.0",
