--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -86,12 +86,12 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.arkhaminvestigator'
+    namespace 'com.arkhaminvestigator.dev'
     defaultConfig {
-        applicationId 'com.arkhaminvestigator'
+        applicationId 'com.arkhaminvestigator.dev'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 392
+        versionCode 393
         versionName "2.0.5"
     }
     signingConfigs {
