--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "eas:android": "npm run version:increment && npm run prebuild:android && eas build -p android",
     "eas:apk": "npm run eas:android -- --profile apk",
     "build:apk": "npm run eas:apk -- --local",
-    "build:android": "npm run eas:android -- --local",
+    "build:android": "npm run npm run eas:android -- --local",
+    "build:ios": "npm run prebuild:ios && eas build -p ios --local",
     "setup:font": "tsx ./cli/update-icon-font.ts",
     "setup": "npm run setup:font",
     "version:increment": "tsx ./cli/increment-version.ts",
